// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo -- item-disabled 1`] = `
.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2.c2.c2 {
  pointer-events: none;
  color: #bbb;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c2"
        disabled=""
      >
        Menu 2 - disabled
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu 1`] = `
.c17 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c17:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c22 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c19 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c20 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c21 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c18 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c18,
.c18 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c18,
.c18 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c18 .uc-fe-menu-item:hover,
.c18 .uc-fe-menu-submenu-title-content:hover,
.c18 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c18 .uc-fe-menu-item-selected,
.c18 .uc-fe-menu-submenu-title-selected,
.c18 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c18 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c8 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c10 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c13 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c6 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c6:hover {
  border-color: #4683e6;
}

.c6 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c6 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c6 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c6 .c9,
.c6 .c11 {
  line-height: 16px;
}

.c6 .c9 {
  padding-right: 20px;
}

.c6 .c11 {
  padding-left: 20px;
}

.c6 .c9 {
  display: none;
}

.c16 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #4683e6;
}

.c16 .c12 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c16 .c14 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c16 .c7 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c16 .c9,
.c16 .c11 {
  line-height: 16px;
}

.c16 .c9 {
  padding-right: 20px;
}

.c16 .c11 {
  padding-left: 20px;
}

.c16 .c7 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c16 .c12 {
  left: 100%;
  margin-left: -19px;
}

.c16 .c14 {
  background: #9fecc0;
}

.c16 .c11 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        selectable
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          checked=""
          class="c16"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        showSelectAll
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <span
              class="c9 c10"
            >
              ON
            </span>
            <span
              class="c11 c10"
            >
              OFF
            </span>
            <span
              class="c12 c13"
            >
              <span
                class="c14 c15"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        refreshMenuData
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c17"
          type="button"
        >
          refreshMenuData
        </button>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c18"
    >
      <div
        class="uc-fe-menu-item c19"
      >
        root-0-item
      </div>
      <div
        class="uc-fe-menu-item c19"
      >
        root-1-item
      </div>
      <div
        class="uc-fe-menu-item c19"
      >
        root-2-item
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c20"
          >
            <div
              class="uc-fe-menu-submenu-title-content c21"
            >
              root-0-subMenu
              <i
                class="c22 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c20"
          >
            <div
              class="uc-fe-menu-submenu-title-content c21"
            >
              root-1-subMenu
              <i
                class="c22 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-collapse 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c7 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c5 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c6 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__up "
                    type="up"
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="uc-fe-menu-selectall-checkbox c8 uc-fe-checkbox c2"
              >
                <i
                  class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                  type="checkbox"
                />
                全选
              </span>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 1
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 2
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 3
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__up "
                    type="up"
                  />
                </div>
              </div>
            </div>
            <div
              class=""
              open=""
            >
              <span
                class="uc-fe-menu-selectall-checkbox c8 uc-fe-checkbox c2"
              >
                <i
                  class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                  type="checkbox"
                />
                全选
              </span>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 1
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 2
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 3
                </span>
              </div>
              <div
                class="uc-fe-menu-item c1"
              >
                <span
                  class="uc-fe-checkbox c2"
                >
                  <i
                    class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
                    type="checkbox"
                  />
                  Menu 4
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 3
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 3
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-controlled 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c5 .c3 {
  color: #526075;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #4074e1;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed "
            type="checkbox-ed"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c5"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed "
            type="checkbox-ed"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c5"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed "
            type="checkbox-ed"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c5"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item uc-fe-menu-item-selected c1"
        selected=""
      >
        <span
          checked=""
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed "
            type="checkbox-ed"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c5"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-multiple 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c5 .c3 {
  color: #4074e1;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-selectable 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c5 .c3 {
  color: #4074e1;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- menu-showSelectAll 1`] = `
.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c10 .c3 {
  color: #4074e1;
}

.c7 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c5 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c6 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c9 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c5"
          >
            <div
              class="uc-fe-menu-submenu-title-content c8"
            >
              SubMenu 3
              <i
                class="c7 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="uc-fe-menu-selectall-checkbox c9 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
          type="checkbox"
        />
        全选
      </span>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 1
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 2
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 3
        </span>
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        <span
          class="uc-fe-checkbox c2"
        >
          <i
            class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox "
            type="checkbox"
          />
          Menu 4
        </span>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c5"
          >
            <div
              class="uc-fe-menu-submenu-title-content c8"
            >
              SubMenu 3
              <i
                class="c7 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c5"
          >
            <div
              class="uc-fe-menu-submenu-title-content c8"
            >
              SubMenu 3
              <i
                class="c7 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 1
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c5"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c6"
                >
                  SubMenu 2
                  <i
                    class="c7 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c5"
          >
            <div
              class="uc-fe-menu-submenu-title-content c8"
            >
              SubMenu 3
              <i
                class="c7 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-styleType 1`] = `
.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c3 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c5 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 1 - default
                  <i
                    class="c4 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 2 - collapse
                  <i
                    class="c4 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div
            class="uc-fe-menu-submenu-title c2"
          >
            <div
              class="uc-fe-menu-submenu-title-content c5"
            >
              SubMenu 3 - popover
              <i
                class="c4 uc-fe-icon icon__caret-right "
                type="caret-right"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu demo -- submenu-title 1`] = `
.c5.c5.c5 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -0.5em;
  font-size: 14px;
}

.c1 {
  padding: 0 8px;
  margin: 0 8px;
  display: block;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c2 {
  padding: 0 8px;
  display: block;
  cursor: pointer;
}

.c3 {
  padding: 0 8px;
  padding-right: 40px;
  position: relative;
  border-bottom: 1px solid;
  margin: 8px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  box-sizing: border-box;
  max-width: 360px;
  min-width: 64px;
  overflow: auto;
  padding: 10px 0;
  border-radius: 2px;
  text-align: left;
}

.c0,
.c0 .style__PopupContentWrap-ulx11w-2 {
  border: 1px solid #c3cad9;
}

.c0,
.c0 .uc-fe-menu-popup-content-wrap {
  color: #6b798e;
  background: #fff;
}

.c0 .uc-fe-menu-item:hover,
.c0 .uc-fe-menu-submenu-title-content:hover,
.c0 .uc-fe-menu-selectall-checkbox:hover {
  background: #eaf3fd;
}

.c0 .uc-fe-menu-item-selected,
.c0 .uc-fe-menu-submenu-title-selected,
.c0 .uc-fe-menu-selectall-checkbox-checked {
  color: #4074e1;
}

.c0 .uc-fe-menu-submenu-title-content-collapse {
  border-color: #c3cad9;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 1
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 2
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 3
      </div>
      <div
        class="uc-fe-menu-item c1"
      >
        Menu 4
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  SubMenu 1
                  <i
                    class="c4 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div
                class="uc-fe-menu-submenu-title c2"
              >
                <div
                  class="uc-fe-menu-submenu-title-content uc-fe-menu-submenu-title-content-collapse c3"
                >
                  <i
                    class="uc-fe-icon icon__loading uc-fe-icon-spin c5"
                    type="loading"
                  />
                  <i
                    class="c4 uc-fe-icon icon__down "
                    type="down"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
